--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <h1>Hello world, I'm a layout</h1>
+    <p>Now is <%= Time.now %><p>
     <%= yield %>
   </body>
 </html>
