--- a/app/views/questions/question.html.erb
+++ b/app/views/questions/question.html.erb
@@ -1,7 +1,5 @@
-<h1>Our first question</h1>
-<form>
-  <label for="fname">First name: </label>
-  <input type="text" id="fname" name="fname">
-  <label for="lname">Last name: </label>
-  <input type="text" id="lname" name="lname">
+<h1>Ask me whatever you want !</h1>
+<form action="/answer" method="get">
+  <input type="text" name="question" placeholder="Ask your question">
+  <input type="submit" value="Ask!">
 </form>
